# dockerizer

./: Cargo.toml  README.md  README_TEMPLATE.md  generate.sh
.github/workflows/: generate-readme.yml
src/: main.rs
templates/: Rust.Dockerfile
