[package]
name = "dockerizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
inquire = "0.6.2"
lazy_static = "1.4.0"
regex = "1.10.2"
